src/test/run-pass/issue-2642.rs
fn f() {
   let _x: uint = loop { loop { break; } };
}

fn main() {
}
